<resources>

    <!--Menu-->
    <string name="t_port_mapping_test">Port Mapping Test</string>
    <string name="t_view_log">View log</string>
    <string name="t_reload">Reload</string>
    <string name="t_simple_mode">Simple mode</string>

    <string name="t_fmt_ethernet">Ethernet Adapter (%s)</string>
    <string name="t_fmt_wifi" translatable="false">Wifi %s</string>

    <!--ex. "Ethernet Adapter (eth0), router:uuid=59df73c8-4f8611e5, serviceId=WanPPPConn1"-->
    <string name="t_fmt_network_identity">%1$s, router=uuid:%2$s, serviceId=%3$s</string>

    <string name="t_network_not_found">No Active Network Adapters Found</string>

    <string name="t_delete">Delete</string>
    <string name="t_enabled">Enabled</string>
    <string name="t_unknown">Unknown</string>

    <string name="t_private_ip">Private IP Address: </string>
    <string name="t_wan_id">WAN: </string>
    <string name="t_wan_external_ip_address">External IP Address:</string>
    <string name="t_wan_connection_state">State:</string>
    <string name="t_hardware_address">Hardware Address:</string>
    <string name="t_router_name">Router:</string>
    <string name="t_router_manufacturer">Manufacturer:</string>
    <string name="t_wan_state">State:</string>
    <string name="t_wan_duration_is_0">(Nothing)</string>

    <string name="t_add_port">Add port</string>
    <string name="t_empty">(Empty)</string>

    <!--enum Connection.Status-->
    <string name="t_status_unconfigured">Unconfigured</string>
    <string name="t_status_connecting">Connecting</string>
    <string name="t_status_connected">Connected</string>
    <string name="t_status_pending_disconnect">PendingDisconnect</string>
    <string name="t_status_disconnecting">Disconnecting</string>
    <string name="t_status_disconnected">Disconnected</string>

    <string name="t_do_you_want_to_delete" >Do you want to delete the "%1$s" (%2$s) ?</string>

    <string-array name="wan_table_headers">
        <item/>
        <item>Client IP</item>
        <item>External/Internal Port</item>
        <item>Protocol</item>
        <item>Description</item>
        <item>Duration</item>
        <item>Enabled</item>
        <item/>
    </string-array>

    <!--logging-->
    <string name="t_log_starting">Starting: </string>
    <string name="t_log_finished">Finished: </string>
    <string name="t_log_success">Success: </string>
    <string name="t_log_failed">Failed: </string>

</resources>
